--- a/contacts/templates/contacts/portfolio.html
+++ b/contacts/templates/contacts/portfolio.html
@@ -1,6 +1,7 @@
 {% extends 'contacts/base.html' %} {% block content %}
 <div class='main'>
-  <h3>Published material that I have written, recorded, performed, toured, and collaborated on:</h3>
+  <h3>Published material that I have written, recorded, performed, toured, and collaborated on.</h3> 
+  <h3>Current video content is also available through the links below:</h3>
   <br>
 <div class='list'><br>
 <ul>
