Add custom application metrics (StatsD middleware and events)

--- a/contacts/templates/contacts/portfolio.html
+++ b/contacts/templates/contacts/portfolio.html
@@ -4,6 +4,7 @@
   <br>
 <div class='list'><br>
 <ul>
+  <li><a href='https://abhoria.bandcamp.com/music' target='_blank'>Abhoria</a></li>
   <li><a href='https://inthecompanyofserpentsdoom.bandcamp.com/album/lux' target='_blank'>In the Company of Serpents</a></li>
   <li><a href='https://nightwraith.bandcamp.com/' target='_blank'>NightWraith</a></li>
   <li><a href='https://falsecathedrals.bandcamp.com/' target='_blank'>False Cathedrals</a></li>
