--- a/contacts/templates/contacts/profile.html
+++ b/contacts/templates/contacts/profile.html
@@ -7,6 +7,15 @@
 <div class='profile'>
 <h3>Guitar | Voice | Bass | Drums | Keys | Composer</h3>
 </div>
+
+<div style="text-align: center;">
+  <form action="{% url 'demo_click' %}" method="get">
+    <button type="submit" style="width: 150px; color: ivory; cursor: pointer;">
+      Click Event
+    </button>
+  </form>
+</div>
+
 </div><br>
 
 
