--- a/contacts/templates/contacts/contact.html
+++ b/contacts/templates/contacts/contact.html
@@ -8,7 +8,7 @@
   <a href='mailto:benjaminjackpitts@gmail.com' target='_blank'>Email</a>
   <a href='https://www.facebook.com/ben.pitts.7/' target='_blank'>Facebook</a>
   <a href='https://www.linkedin.com/in/benjaminjackpitts/' target='_blank'>LinkedIn</a>
-  <a href='https://benjaminjackpitts.dev/' target='_blank'>Website</a>
+  <a href='https://nightwraithband.com/' target='_blank'>Website</a>
   <a href='https://github.com/BenjaminPitts' target='_blank'>GitHub</a>
   <a href='https://twitter.com/BenjaminJackPi1' target='_blank'>Twitter</a>
 </div>
